#25 Avoid scrollbars during transitions

--- a/plugins/LayerSwitcher/LayerSwitcher.css
+++ b/plugins/LayerSwitcher/LayerSwitcher.css
@@ -100,11 +100,22 @@
 	font-size: 110%;
 }
 
+/* Added to html and body temporarily to avoid scrollbars during transitions */
+.lswitch-overflow-hidden {
+	overflow: hidden !important;	
+}
+
 
 
 
 @media (min-width: 992px) {
 	/* For desktop computers */
+	
+	
+	/* Avoid things appearing under the switcher */
+	.leaflet-left {
+		left: 310px;
+	}
 	
 	#mapdiv {
 		margin-left: 0px !important;
